@@ -2,10 +2,11 @@ package water.sparkling.scripts
 
 import java.io.File
 
+import org.apache.spark.h2o.FunSuiteWithLogging
 import org.apache.spark.h2o.backends.SharedBackendConf
 import org.apache.spark.h2o.backends.SharedBackendConf._
 import org.apache.spark.h2o.backends.external.ExternalBackendConf
-import org.apache.spark.h2o.{BackendIndependentTestHelper, FunSuiteWithLogging}
+import org.apache.spark.h2o.utils.H2OContextTestHelper._
 import org.apache.spark.repl.h2o.{CodeResults, H2OInterpreter}
 import org.apache.spark.{SparkConf, SparkContext}
 import org.scalatest.{BeforeAndAfterAll, Suite}
@@ -15,8 +16,7 @@ import scala.collection.immutable.HashMap
 import scala.collection.mutable.ListBuffer
 
 
-
-trait ScriptsTestHelper extends FunSuiteWithLogging with BeforeAndAfterAll with BackendIndependentTestHelper {
+trait ScriptsTestHelper extends FunSuiteWithLogging with BeforeAndAfterAll{
 
   self: Suite =>
   var sparkConf: SparkConf = _
@@ -36,15 +36,19 @@ trait ScriptsTestHelper extends FunSuiteWithLogging with BeforeAndAfterAll with 
 
     val cloudSize = 2
     sparkConf.set(ExternalBackendConf.PROP_EXTERNAL_H2O_NODES._1, cloudSize.toString)
-    if(testsInExternalMode(sparkConf)){
-      startCloud(cloudSize, cloudName, sparkConf.get("spark.ext.h2o.client.ip"), assemblyJar)
+
+    if(isExternalClusterUsed(sparkConf) && isManualClusterStartModeUsed(sparkConf)){
+      startExternalH2OCloud(cloudSize, cloudName, sparkConf.get("spark.ext.h2o.client.ip"), assemblyJar)
     }
     sc = new SparkContext(org.apache.spark.h2o.H2OConf.checkSparkConf(sparkConf))
     super.beforeAll()
   }
 
   override protected def afterAll(): Unit = {
-    stopCloudIfExternal(sc)
+    if(isExternalClusterUsed(sparkConf) && isManualClusterStartModeUsed(sparkConf)) {
+      stopExternalH2OCloud()
+    }
+
     if (sc != null){
       sc.stop()
     }
@@ -54,8 +58,6 @@ trait ScriptsTestHelper extends FunSuiteWithLogging with BeforeAndAfterAll with 
   def defaultConf: SparkConf = {
     val conf = new SparkConf().setAppName("Script testing")
       .set("spark.ext.h2o.repl.enabled","false") // disable repl in tests
-      .set("spark.driver.extraJavaOptions", "-XX:MaxPermSize=384m")
-      .set("spark.executor.extraJavaOptions", "-XX:MaxPermSize=384m")
       .set("spark.driver.extraClassPath", assemblyJar)
       .set("spark.scheduler.minRegisteredResourcesRatio", "1")
       .set("spark.task.maxFailures", "1") // Any task failures are suspicious
@@ -65,8 +67,6 @@ trait ScriptsTestHelper extends FunSuiteWithLogging with BeforeAndAfterAll with 
       .set("spark.worker.timeout", "360") // Increase worker timeout if jenkins machines are busy
       .set("spark.ext.h2o.backend.cluster.mode", sys.props.getOrElse("spark.ext.h2o.backend.cluster.mode", "internal"))
       .set("spark.ext.h2o.external.start.mode", sys.props.getOrElse("spark.ext.h2o.external.start.mode", "manual"))
-      // set spark-warehouse manually because of https://issues.apache.org/jira/browse/SPARK-17810, fixed in 2.0.2
-      .set("spark.sql.warehouse.dir", s"file:${new File("spark-warehouse").getAbsolutePath}")
       .setJars(Array(assemblyJar))
     conf
   }
